# pipelinewise-tap-mysql

./: Makefile  README.md  compose.yml  config.json.sample  dbc.toml  meltano.yml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  pythonpublish.yml  smoke-test.yml
dev/: init.sql  mariadb_logical_replication_notes.md
scripts/: README.md  bench_adbc.py  bench_mysql.py  bench_mysqldump.py  bench_pymysql.py
tap_mysql/: __init__.py  adbc.py  connection.py  discover_utils.py  stream_utils.py
tap_mysql/sync_strategies/: binlog.py  common.py  full_table.py  incremental.py
tests/integration/: conftest.py  test_arrow_batch.py  test_full_table_interruption.py  test_tap_mysql.py  utils.py
tests/unit/: test__init__.py  test_adbc.py  test_connection.py
tests/unit/sync_strategies/: test_arrow_batch_writer.py  test_binlog.py  test_common.py  test_sync_query_arrow.py
